force-app/main/default/objects/Co_Op_Supporting_Document__c/Co_Op_Supporting_Document__c.object-meta.xml
<CustomObject>
    <label>Co Op Supporting Document</label>
    <nameField>
        <label>Co Op Supporting Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supporting Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>