force-app/main/default/objects/Co_Op_Supporting_Document__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <description>Reference for the attachment associated with co op.</description>
    <label>Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>