force-app/main/default/objects/Co_Op_Supporting_Document__c/fields/Co_Op_Request__c.field-meta.xml
<CustomField>
    <fullName>Co_Op_Request__c</fullName>
    <description>Reference to co op request.</description>
    <label>Co Op</label>
    <referenceTo>Co_Op__c</referenceTo>
    <relationshipLabel>Supporting Documents</relationshipLabel>
    <relationshipName>Supporting_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>