force-app/main/default/objects/Co_Op_Supporting_Document__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date of invoice and Proof of payment.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>