force-app/main/default/objects/Co_Op_Supporting_Document__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed reimbursement request form</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>Proof of payment</fullName>
            </value>
            <value>
                <fullName>Other required supporting documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>